--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-
+.idea
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -35,6 +35,11 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+
+.idea/
+venv/
+.DS_Store
+.ipynb_checkpoints/
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
@@ -333,6 +338,14 @@ ASALocalRun/
 
 # NVidia Nsight GPU debugger configuration file
 *.nvuser
+
+# PyCharm
+#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
+#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
+#  and can be added to the global gitignore or merged into this file.  For a more nuclear
+#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+.idea/
+
 
 # MFractors (Xamarin productivity tool) working folder
 .mfractor/
